arrrumando alguns erros e criando o EstoqueController